// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Typography As specific element 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 700;
  line-height: 2.5rem;
  font-size: 2rem;
  letter-spacing: 0rem;
  color: #212332;
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 700;
  line-height: 2.25rem;
  font-size: 1.75rem;
  letter-spacing: 0rem;
  color: #212332;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 700;
  line-height: 2rem;
  font-size: 1.5rem;
  letter-spacing: 0rem;
  color: #212332;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 700;
  line-height: 1.75rem;
  font-size: 1.25rem;
  letter-spacing: 0rem;
  color: #212332;
}

.emotion-7 {
  font-family: Roboto;
  font-weight: 700;
  line-height: 1.5rem;
  font-size: 1.125rem;
  letter-spacing: 0rem;
  color: #212332;
}

.emotion-8 {
  font-family: Roboto;
  font-weight: 700;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.00625rem;
  color: #212332;
}

.emotion-9 {
  font-family: Roboto;
  font-weight: 700;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-10 {
  font-family: Roboto;
  font-weight: 700;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.00625rem;
  color: #212332;
}

.emotion-11 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.00625rem;
  color: #212332;
}

.emotion-12 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-13 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-14 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-15 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-16 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  color: #212332;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h1
          className="emotion-3"
        >
          Headline 01 - H1
        </h1>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h2
          className="emotion-4"
        >
          Headline 02 - H2
        </h2>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h3
          className="emotion-5"
        >
          Headline 03 - H3
        </h3>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h4
          className="emotion-6"
        >
          Headline 04 - H4
        </h4>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h5
          className="emotion-7"
        >
          Headline 05 - H5
        </h5>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h6
          className="emotion-8"
        >
          Title 01 - H6
        </h6>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h6
          className="emotion-9"
        >
          Title 02 - H6
        </h6>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h6
          className="emotion-10"
        >
          Title 03 - H6
        </h6>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-11"
        >
          Label 01 - SPAN
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-12"
        >
          Label 02 - SPAN
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-13"
        >
          Label 03 - SPAN
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-14"
        >
          Body 01 - P
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-15"
        >
          Body 02 - P
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-16"
        >
          Body 03 - P
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Typography Extra style 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  font-weight: 700;
  color: #212332;
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  font-style: italic;
  color: #212332;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #212332;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-3"
        >
          Bold
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-4"
        >
          Italic
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-5"
        >
          Underline
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Typography Font Spacing Variations 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 700;
  line-height: 2.5rem;
  font-size: 2rem;
  letter-spacing: 0rem;
  color: #212332;
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 700;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.00625rem;
  color: #212332;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.00625rem;
  color: #212332;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-7 {
  font-family: Roboto Mono;
  font-weight: 700;
  line-height: 2.5rem;
  font-size: 2rem;
  letter-spacing: 0rem;
  color: #212332;
}

.emotion-8 {
  font-family: Roboto Mono;
  font-weight: 700;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.00625rem;
  color: #212332;
}

.emotion-9 {
  font-family: Roboto Mono;
  font-weight: 500;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.00625rem;
  color: #212332;
}

.emotion-10 {
  font-family: Roboto Mono;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #212332;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h1
          className="emotion-3"
        >
          Headline 01 (Normal)
        </h1>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h6
          className="emotion-4"
        >
          Title 01 (Normal)
        </h6>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-5"
        >
          Label 01 (Normal)
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-6"
        >
          Body 01 (Normal)
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h1
          className="emotion-7"
        >
          Headline 01 (Mono)
        </h1>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h6
          className="emotion-8"
        >
          Title 01 (Mono)
        </h6>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-9"
        >
          Label 01 (Mono)
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-10"
        >
          Body 01 (Mono)
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Typography Types (inverted) 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  background: #212332;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #b9cdfc;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #FFB8D1;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #1de9b6;
}

.emotion-7 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #dbc1ff;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-3"
        >
          Primary
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-4"
        >
          Secondary
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-5"
        >
          Error
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-6"
        >
          Active
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-7"
        >
          Visited
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Typography Types (light) 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #54587F;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #CB205D;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
}

.emotion-7 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #6c28cc;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-3"
        >
          Primary
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-4"
        >
          Secondary
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-5"
        >
          Error
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-6"
        >
          Active
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-7"
        >
          Visited
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Typography Variants 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 700;
  line-height: 2.5rem;
  font-size: 2rem;
  letter-spacing: 0rem;
  color: #212332;
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 700;
  line-height: 2.25rem;
  font-size: 1.75rem;
  letter-spacing: 0rem;
  color: #212332;
}

.emotion-5 {
  font-family: Roboto;
  font-weight: 700;
  line-height: 2rem;
  font-size: 1.5rem;
  letter-spacing: 0rem;
  color: #212332;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 700;
  line-height: 1.75rem;
  font-size: 1.25rem;
  letter-spacing: 0rem;
  color: #212332;
}

.emotion-7 {
  font-family: Roboto;
  font-weight: 700;
  line-height: 1.5rem;
  font-size: 1.125rem;
  letter-spacing: 0rem;
  color: #212332;
}

.emotion-8 {
  font-family: Roboto;
  font-weight: 700;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.00625rem;
  color: #212332;
}

.emotion-9 {
  font-family: Roboto;
  font-weight: 700;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-10 {
  font-family: Roboto;
  font-weight: 700;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.00625rem;
  color: #212332;
}

.emotion-11 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.00625rem;
  color: #212332;
}

.emotion-12 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-13 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-14 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 0.875rem;
  font-size: 0.625rem;
  letter-spacing: 0.00625rem;
  color: #212332;
}

.emotion-15 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-16 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-17 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  color: #212332;
}

.emotion-18 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 0.875rem;
  font-size: 0.625rem;
  letter-spacing: 0.00625rem;
  color: #212332;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h1
          className="emotion-3"
        >
          Headline 01
        </h1>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h2
          className="emotion-4"
        >
          Headline 02
        </h2>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h3
          className="emotion-5"
        >
          Headline 03
        </h3>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h4
          className="emotion-6"
        >
          Headline 04
        </h4>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h5
          className="emotion-7"
        >
          Headline 05
        </h5>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h6
          className="emotion-8"
        >
          Title 01
        </h6>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h6
          className="emotion-9"
        >
          Title 02
        </h6>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h6
          className="emotion-10"
        >
          Title 03
        </h6>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-11"
        >
          Label 01
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-12"
        >
          Label 02
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-13"
        >
          Label 03
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-14"
        >
          Label 04
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-15"
        >
          Body 01
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-16"
        >
          Body 02
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-17"
        >
          Body 03
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-18"
        >
          Body 04
        </p>
      </div>
    </div>
  </div>
</div>
`;
